<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/category_data" android:textSize="20sp"
        android:textColor="@color/textPrimary" android:textStyle="bold"
        android:paddingLeft="20dp" android:paddingRight="20dp"
        android:paddingTop="16dp" android:paddingBottom="16dp"/>

    <LinearLayout android:id="@+id/rowDefaultBrowser" style="@style/SettingsRow.Clickable">
        <TextView style="@style/SettingsRowTitle" android:text="@string/set_default_browser"/>
        <TextView style="@style/SettingsRowArrow" android:text="›"/>
    </LinearLayout>
    <include layout="@layout/item_divider"/>
    <LinearLayout android:id="@+id/rowClearHistory" style="@style/SettingsRow.Clickable">
        <TextView style="@style/SettingsRowTitle" android:text="@string/clear_history" android:textColor="@color/danger"/>
    </LinearLayout>

</LinearLayout>